<resources>
    <string name="u">Navigate up</string>
    <string name="APKTOOL_RENAMED_0x7f130003">Done</string>
    <string name="APKTOOL_RENAMED_0x7f130006">OFF</string>
    <string name="APKTOOL_RENAMED_0x7f130007">ON</string>
    <string name="APKTOOL_RENAMED_0x7f130008">Alt+</string>
    <string name="APKTOOL_RENAMED_0x7f130009">Ctrl+</string>
    <string name="APKTOOL_RENAMED_0x7f13000a">delete</string>
    <string name="APKTOOL_RENAMED_0x7f13000b">enter</string>
    <string name="APKTOOL_RENAMED_0x7f13000c">Function+</string>
    <string name="APKTOOL_RENAMED_0x7f13000d">Meta+</string>
    <string name="APKTOOL_RENAMED_0x7f13000e">Shift+</string>
    <string name="APKTOOL_RENAMED_0x7f13000f">space</string>
    <string name="APKTOOL_RENAMED_0x7f130010">Sym+</string>
    <string name="APKTOOL_RENAMED_0x7f130011">Menu+</string>
    <string name="APKTOOL_RENAMED_0x7f130012">Search…</string>
    <string name="APKTOOL_RENAMED_0x7f130013">Clear query</string>
    <string name="APKTOOL_RENAMED_0x7f130015">Search</string>
    <string name="APKTOOL_RENAMED_0x7f130016">Submit query</string>
    <string name="APKTOOL_RENAMED_0x7f130017">Voice search</string>
    <string name="APKTOOL_RENAMED_0x7f13001a">Collapse</string>
    <string name="APKTOOL_RENAMED_0x7f13001b">Account</string>
    <string name="APKTOOL_RENAMED_0x7f13001c">Activate</string>
    <string name="APKTOOL_RENAMED_0x7f13001d">For the app to operate correctly, please allow TiviMate to set alarms and reminders</string>
    <string name="APKTOOL_RENAMED_0x7f13001e">For the app to operate correctly, please allow TiviMate to access all files</string>
    <string name="APKTOOL_RENAMED_0x7f13001f">androidx.startup</string>
    <string name="APKTOOL_RENAMED_0x7f130020">TiviMate</string>
    <string name="APKTOOL_RENAMED_0x7f130021">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="APKTOOL_RENAMED_0x7f130022">Apply</string>
    <string name="APKTOOL_RENAMED_0x7f130023">Apply changes</string>
    <string name="APKTOOL_RENAMED_0x7f130024">Apply changes?</string>
    <string name="auto">Auto</string>
    <string name="APKTOOL_RENAMED_0x7f130026">Back</string>
    <string name="APKTOOL_RENAMED_0x7f130027">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="APKTOOL_RENAMED_0x7f130028">Collapse</string>
    <string name="APKTOOL_RENAMED_0x7f130029">Collapse the bottom sheet</string>
    <string name="APKTOOL_RENAMED_0x7f13002a">Expand</string>
    <string name="APKTOOL_RENAMED_0x7f13002b">Expand the bottom sheet</string>
    <string name="APKTOOL_RENAMED_0x7f13002c">Expand halfway</string>
    <string name="APKTOOL_RENAMED_0x7f13002d">Half expand the bottom sheet</string>
    <string name="APKTOOL_RENAMED_0x7f13002e">Drag handle</string>
    <string name="APKTOOL_RENAMED_0x7f13002f">Collapsed</string>
    <string name="APKTOOL_RENAMED_0x7f130030">Expanded</string>
    <string name="APKTOOL_RENAMED_0x7f130031">Half expanded</string>
    <string name="APKTOOL_RENAMED_0x7f130032">Answer</string>
    <string name="APKTOOL_RENAMED_0x7f130033">Video</string>
    <string name="APKTOOL_RENAMED_0x7f130034">Decline</string>
    <string name="APKTOOL_RENAMED_0x7f130035">Hang Up</string>
    <string name="APKTOOL_RENAMED_0x7f130036">Incoming call</string>
    <string name="APKTOOL_RENAMED_0x7f130037">Ongoing call</string>
    <string name="APKTOOL_RENAMED_0x7f130038">Screening an incoming call</string>
    <string name="APKTOOL_RENAMED_0x7f130039">Cancel</string>
    <string name="APKTOOL_RENAMED_0x7f13003a">Characters entered %1$d of %2$d</string>
    <string name="APKTOOL_RENAMED_0x7f13003b">Character limit exceeded %1$d of %2$d</string>
    <string name="APKTOOL_RENAMED_0x7f13003c">%1$d/%2$d</string>
    <string name="APKTOOL_RENAMED_0x7f13003d">Clear</string>
    <string name="APKTOOL_RENAMED_0x7f13003e">Clear text</string>
    <string name="APKTOOL_RENAMED_0x7f13003f">Close</string>
    <string name="APKTOOL_RENAMED_0x7f130040">43d5bc3ec45b4c9daf12049f94bec3ce</string>
    <string name="APKTOOL_RENAMED_0x7f130041">"repositories {
  system: GIT
  local_root_path: \"$PROJECT_DIR\"
  revision: \"d00b07fdf815685963e6cfec3d908df8b4bde29d\"
}
"</string>
    <string name="APKTOOL_RENAMED_0x7f130042">Re-enter password</string>
    <string name="APKTOOL_RENAMED_0x7f130043">Create account</string>
    <string name="APKTOOL_RENAMED_0x7f130044">Email</string>
    <string name="APKTOOL_RENAMED_0x7f130045">Email is already taken, please reset your password instead</string>
    <string name="APKTOOL_RENAMED_0x7f130046">Log in with Facebook</string>
    <string name="APKTOOL_RENAMED_0x7f130047">Facebook login failed</string>
    <string name="APKTOOL_RENAMED_0x7f130048"><u>Forgot password</u></string>
    <string name="APKTOOL_RENAMED_0x7f130049">Email is invalid, please correct it and try again</string>
    <string name="APKTOOL_RENAMED_0x7f13004a">"User logged in, starting: "</string>
    <string name="APKTOOL_RENAMED_0x7f13004b">User not logged in, starting ParseLoginActivity</string>
    <string name="APKTOOL_RENAMED_0x7f13004c">Email</string>
    <string name="APKTOOL_RENAMED_0x7f13004d">Please check your email for instructions on how to access your account</string>
    <string name="APKTOOL_RENAMED_0x7f13004e">Enter your email to recover your password</string>
    <string name="APKTOOL_RENAMED_0x7f13004f">Back to Login</string>
    <string name="APKTOOL_RENAMED_0x7f130050">Submit</string>
    <string name="APKTOOL_RENAMED_0x7f130051">Failed to request password reset, please try again</string>
    <string name="APKTOOL_RENAMED_0x7f130052">Layout missing Facebook login button, disabled Facebook login</string>
    <string name="APKTOOL_RENAMED_0x7f130053">Layout missing Twitter login button, disabled Twitter login</string>
    <string name="APKTOOL_RENAMED_0x7f130054">Disabled username/password login and signup because of missing layout elements</string>
    <string name="APKTOOL_RENAMED_0x7f130055">"Facebook login failed, exception: "</string>
    <string name="APKTOOL_RENAMED_0x7f130056">"Updating user object after Facebook login failed, exception: "</string>
    <string name="APKTOOL_RENAMED_0x7f130057">Layout missing login button</string>
    <string name="APKTOOL_RENAMED_0x7f130058">Layout missing login help button</string>
    <string name="APKTOOL_RENAMED_0x7f130059">Layout missing password field</string>
    <string name="APKTOOL_RENAMED_0x7f13005a">Layout missing signup button</string>
    <string name="APKTOOL_RENAMED_0x7f13005b">Layout missing username field</string>
    <string name="APKTOOL_RENAMED_0x7f13005c">"Parse username/password login failed, exception: "</string>
    <string name="APKTOOL_RENAMED_0x7f13005d">"Parse signup failed, exception: "</string>
    <string name="APKTOOL_RENAMED_0x7f13005e">"Parse password reset failed, exception: "</string>
    <string name="APKTOOL_RENAMED_0x7f13005f">"Twitter login failed, exception: "</string>
    <string name="APKTOOL_RENAMED_0x7f130060">"Updating user object after Twitter login failed, exception: "</string>
    <string name="APKTOOL_RENAMED_0x7f130061">Logo</string>
    <string name="APKTOOL_RENAMED_0x7f130062">"Passwords don't match, please try again"</string>
    <string name="APKTOOL_RENAMED_0x7f130063">Name</string>
    <string name="APKTOOL_RENAMED_0x7f130064">Please enter your email</string>
    <string name="APKTOOL_RENAMED_0x7f130065">Please enter your name</string>
    <string name="APKTOOL_RENAMED_0x7f130066">Please enter your password</string>
    <string name="APKTOOL_RENAMED_0x7f130067">Please enter your username</string>
    <string name="APKTOOL_RENAMED_0x7f130068">Log in</string>
    <string name="APKTOOL_RENAMED_0x7f130069">Could not log in, please try again later</string>
    <string name="APKTOOL_RENAMED_0x7f13006a">"The username and password you entered don't match"</string>
    <string name="APKTOOL_RENAMED_0x7f13006b">Sign up</string>
    <string name="APKTOOL_RENAMED_0x7f13006c">Password</string>
    <string name="APKTOOL_RENAMED_0x7f13006d">Please wait…</string>
    <string name="APKTOOL_RENAMED_0x7f13006e">Please re-enter your password</string>
    <string name="APKTOOL_RENAMED_0x7f13006f">Could not sign up, please try again later</string>
    <string name="APKTOOL_RENAMED_0x7f130070">Log in with Twitter</string>
    <string name="APKTOOL_RENAMED_0x7f130071">Twitter login failed</string>
    <string name="APKTOOL_RENAMED_0x7f130072">Update the app</string>
    <string name="APKTOOL_RENAMED_0x7f130073">Username</string>
    <string name="APKTOOL_RENAMED_0x7f130074">Username is already taken, please choose a different one</string>
    <string name="APKTOOL_RENAMED_0x7f130075">Enable</string>
    <string name="APKTOOL_RENAMED_0x7f130076">"%1$s won't work unless you enable Google Play services."</string>
    <string name="APKTOOL_RENAMED_0x7f130077">Enable Google Play services</string>
    <string name="APKTOOL_RENAMED_0x7f130078">Install</string>
    <string name="APKTOOL_RENAMED_0x7f130079">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="APKTOOL_RENAMED_0x7f13007a">Get Google Play services</string>
    <string name="APKTOOL_RENAMED_0x7f13007b">Google Play services availability</string>
    <string name="APKTOOL_RENAMED_0x7f13007c">Google Play services error</string>
    <string name="APKTOOL_RENAMED_0x7f13007d">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="APKTOOL_RENAMED_0x7f13007e">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="APKTOOL_RENAMED_0x7f13007f">Update</string>
    <string name="APKTOOL_RENAMED_0x7f130080">"%1$s won't run unless you update Google Play services."</string>
    <string name="APKTOOL_RENAMED_0x7f130081">Update Google Play services</string>
    <string name="APKTOOL_RENAMED_0x7f130082">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="APKTOOL_RENAMED_0x7f130083">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="APKTOOL_RENAMED_0x7f130084">Open on phone</string>
    <string name="APKTOOL_RENAMED_0x7f130085">Sign in</string>
    <string name="APKTOOL_RENAMED_0x7f130086">Sign in with Google</string>
    <string name="APKTOOL_RENAMED_0x7f130087">Copy</string>
    <string name="APKTOOL_RENAMED_0x7f130088">default</string>
    <string name="APKTOOL_RENAMED_0x7f130089">Default</string>
    <string name="APKTOOL_RENAMED_0x7f13008a">33400529460-qh0k5blmhc1931j2ebu4k1ll6o5a4ebo.apps.googleusercontent.com</string>
    <string name="APKTOOL_RENAMED_0x7f13008b">Delete</string>
    <string name="APKTOOL_RENAMED_0x7f13008c">Device ID</string>
    <string name="APKTOOL_RENAMED_0x7f13008d">Dismiss</string>
    <string name="APKTOOL_RENAMED_0x7f13008e">Done</string>
    <string name="APKTOOL_RENAMED_0x7f13008f">"Don't show again"</string>
    <string name="APKTOOL_RENAMED_0x7f130090">Error: invalid</string>
    <string name="APKTOOL_RENAMED_0x7f130091">Error</string>
    <string name="APKTOOL_RENAMED_0x7f130092">Enable subtitles</string>
    <string name="APKTOOL_RENAMED_0x7f130093">Disable subtitles</string>
    <string name="APKTOOL_RENAMED_0x7f130096">Enter fullscreen</string>
    <string name="APKTOOL_RENAMED_0x7f130097">Exit fullscreen</string>
    <string name="APKTOOL_RENAMED_0x7f130098">Hide player controls</string>
    <string name="APKTOOL_RENAMED_0x7f130099">Next</string>
    <string name="APKTOOL_RENAMED_0x7f13009a">Hide additional settings</string>
    <string name="APKTOOL_RENAMED_0x7f13009b">Show additional settings</string>
    <string name="APKTOOL_RENAMED_0x7f13011d">Select AM or PM</string>
    <string name="APKTOOL_RENAMED_0x7f13012b">AM</string>
    <string name="APKTOOL_RENAMED_0x7f13012f">PM</string>
</resources>