<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <EditText android:id="@id/APKTOOL_RENAMED_0x7f0b035b" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/APKTOOL_RENAMED_0x7f130073" android:singleLine="true" />
    <EditText android:id="@id/APKTOOL_RENAMED_0x7f0b035a" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/APKTOOL_RENAMED_0x7f07005d" android:hint="@string/APKTOOL_RENAMED_0x7f13006c" android:singleLine="true" android:selectAllOnFocus="true" android:inputType="textPassword" android:fontFamily="sans-serif" />
    <EditText android:id="@id/APKTOOL_RENAMED_0x7f0b0357" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/APKTOOL_RENAMED_0x7f07005d" android:hint="@string/APKTOOL_RENAMED_0x7f130042" android:singleLine="true" android:selectAllOnFocus="true" android:inputType="textPassword" android:fontFamily="sans-serif" />
    <EditText android:id="@id/APKTOOL_RENAMED_0x7f0b0358" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/APKTOOL_RENAMED_0x7f07005d" android:hint="@string/APKTOOL_RENAMED_0x7f130044" android:singleLine="true" android:inputType="text" />
    <EditText android:id="@id/APKTOOL_RENAMED_0x7f0b0359" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/APKTOOL_RENAMED_0x7f07005d" android:hint="@string/APKTOOL_RENAMED_0x7f130063" android:singleLine="true" android:inputType="textPersonName" />
    <Button android:id="@id/APKTOOL_RENAMED_0x7f0b0109" android:layout_marginTop="@dimen/APKTOOL_RENAMED_0x7f07005d" android:text="@string/APKTOOL_RENAMED_0x7f130043" style="@style/APKTOOL_RENAMED_0x7f14017f" />
</LinearLayout>
