<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/APKTOOL_RENAMED_0x7f0b02ee" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <EditText android:id="@id/APKTOOL_RENAMED_0x7f0b025f" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/APKTOOL_RENAMED_0x7f130073" android:singleLine="true" />
    <EditText android:id="@id/APKTOOL_RENAMED_0x7f0b025e" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/APKTOOL_RENAMED_0x7f07005d" android:hint="@string/APKTOOL_RENAMED_0x7f13006c" android:singleLine="true" android:selectAllOnFocus="true" android:inputType="textPassword" android:fontFamily="sans-serif" />
    <LinearLayout android:id="@id/APKTOOL_RENAMED_0x7f0b02ed" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/APKTOOL_RENAMED_0x7f07005b">
        <Button android:id="@id/APKTOOL_RENAMED_0x7f0b02ef" android:text="@string/APKTOOL_RENAMED_0x7f130068" android:layout_weight="0.5" style="@style/APKTOOL_RENAMED_0x7f14017f" />
        <Button android:id="@id/APKTOOL_RENAMED_0x7f0b02f1" android:text="@string/APKTOOL_RENAMED_0x7f13006b" android:layout_weight="0.5" android:layout_marginStart="@dimen/APKTOOL_RENAMED_0x7f07005c" style="@style/APKTOOL_RENAMED_0x7f14017f" />
    </LinearLayout>
    <Button android:id="@id/APKTOOL_RENAMED_0x7f0b02f0" android:layout_marginTop="@dimen/APKTOOL_RENAMED_0x7f07005d" android:layout_marginBottom="@dimen/APKTOOL_RENAMED_0x7f07005d" android:text="@string/APKTOOL_RENAMED_0x7f130048" style="@style/APKTOOL_RENAMED_0x7f140181" />
</LinearLayout>
