<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.button.MaterialButtonToggleGroup android:orientation="vertical" android:id="@id/APKTOOL_RENAMED_0x7f0b0273" android:visibility="gone" android:layout_width="@dimen/APKTOOL_RENAMED_0x7f070456" android:layout_height="@dimen/APKTOOL_RENAMED_0x7f070453" android:contentDescription="@string/APKTOOL_RENAMED_0x7f13011d" app:APKTOOL_RENAMED_0x7f0400e7="@id/APKTOOL_RENAMED_0x7f0b0271" app:APKTOOL_RENAMED_0x7f040555="true" app:APKTOOL_RENAMED_0x7f040592="true"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.button.MaterialButton android:id="@id/APKTOOL_RENAMED_0x7f0b0271" android:layout_width="wrap_content" android:text="@string/APKTOOL_RENAMED_0x7f13012b" android:insetTop="8.0dp" style="?APKTOOL_RENAMED_0x7f0403fd" />
    <com.google.android.material.button.MaterialButton android:id="@id/APKTOOL_RENAMED_0x7f0b0272" android:layout_width="wrap_content" android:text="@string/APKTOOL_RENAMED_0x7f13012f" android:insetBottom="8.0dp" style="?APKTOOL_RENAMED_0x7f0403fd" />
</com.google.android.material.button.MaterialButtonToggleGroup>
