<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="horizontal" android:id="@id/APKTOOL_RENAMED_0x7f0b033c" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textAppearance="?android:textAppearanceMedium" android:textColor="?android:textColorPrimary" android:gravity="center_vertical" android:id="@id/APKTOOL_RENAMED_0x7f0b033b" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_marginBottom="2.0dp" android:drawablePadding="0.0dp" />
    <ImageView android:layout_gravity="center_vertical" android:id="@id/APKTOOL_RENAMED_0x7f0b033d" android:focusable="true" android:layout_width="wrap_content" android:layout_height="match_parent" android:contentDescription="@string/APKTOOL_RENAMED_0x7f130015" style="?APKTOOL_RENAMED_0x7f04000d" />
    <LinearLayout android:orientation="horizontal" android:id="@id/APKTOOL_RENAMED_0x7f0b033f" android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_marginLeft="8.0dp" android:layout_marginRight="8.0dp" android:layout_weight="1.0" android:layoutDirection="locale">
        <ImageView android:layout_gravity="center_vertical" android:id="@id/APKTOOL_RENAMED_0x7f0b0341" android:visibility="gone" android:layout_width="@dimen/APKTOOL_RENAMED_0x7f070029" android:layout_height="wrap_content" android:scaleType="centerInside" style="@style/APKTOOL_RENAMED_0x7f1401c3" />
        <LinearLayout android:layout_gravity="center_vertical" android:orientation="horizontal" android:id="@id/APKTOOL_RENAMED_0x7f0b0343" android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_weight="1.0">
            <view android:ellipsize="end" android:layout_gravity="center_vertical" android:id="@id/APKTOOL_RENAMED_0x7f0b0344" android:background="@null" android:paddingLeft="@dimen/APKTOOL_RENAMED_0x7f07002a" android:paddingRight="@dimen/APKTOOL_RENAMED_0x7f07002b" android:layout_width="0.0dp" android:layout_height="36.0dp" android:singleLine="true" android:layout_weight="1.0" android:inputType="textAutoComplete|textNoSuggestions" android:dropDownAnchor="@id/APKTOOL_RENAMED_0x7f0b033f" android:imeOptions="actionSearch" android:dropDownHeight="wrap_content" android:dropDownHorizontalOffset="0.0dp" android:dropDownVerticalOffset="0.0dp" class="androidx.appcompat.widget.SearchView$SearchAutoComplete" />
            <ImageView android:layout_gravity="center_vertical" android:id="@id/APKTOOL_RENAMED_0x7f0b033e" android:background="?APKTOOL_RENAMED_0x7f040552" android:paddingLeft="8.0dp" android:paddingRight="8.0dp" android:focusable="true" android:layout_width="wrap_content" android:layout_height="match_parent" android:contentDescription="@string/APKTOOL_RENAMED_0x7f130013" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:id="@id/APKTOOL_RENAMED_0x7f0b0380" android:layout_width="wrap_content" android:layout_height="match_parent">
            <ImageView android:layout_gravity="center_vertical" android:id="@id/APKTOOL_RENAMED_0x7f0b0340" android:background="?APKTOOL_RENAMED_0x7f040552" android:paddingLeft="16.0dp" android:paddingRight="16.0dp" android:focusable="true" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="match_parent" android:contentDescription="@string/APKTOOL_RENAMED_0x7f130016" />
            <ImageView android:layout_gravity="center_vertical" android:id="@id/APKTOOL_RENAMED_0x7f0b0345" android:background="?APKTOOL_RENAMED_0x7f040552" android:paddingLeft="16.0dp" android:paddingRight="16.0dp" android:focusable="true" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="match_parent" android:contentDescription="@string/APKTOOL_RENAMED_0x7f130017" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
